--- a/public/stylesheets/agryeel.css
+++ b/public/stylesheets/agryeel.css
@@ -201,6 +201,23 @@ body { background: #f5f5f5; }
   font-size: 0.8rem;
 }
 /**********************************************************************************************************************/
+/* 全画面共通定義                                                                                                                                                                                                                                                  */
+/**********************************************************************************************************************/
+.ikubyoTitle {
+  width: 100%;
+  line-height: 1rem;
+  background: #006400;
+  color: #FFFFFF;
+  padding: 8px;
+  text-align: center;
+}
+.ikubyoTitle .main {
+  font-size: 1.2rem;
+}
+.ikubyoTitle .sub {
+  font-size: 0.8rem;
+}
+/**********************************************************************************************************************/
 /* トップ画面スタイル定義 */
 /**********************************************************************************************************************/
 .top-panel {
@@ -1669,6 +1686,46 @@ font-size: 1.6rem;}
   overflow-y: scroll;
   overflow-x: hidden;
 }}
+#G1002WorkList::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (min-width : 1599px) {
+#G1002WorkList {
+	height: 580px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}}
+#G1002HouseList::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (min-width : 1599px) {
+#G1002HouseList {
+  height: 450px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}}
+#G1002TimeLine::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (min-width : 1599px) {
+#G1002TimeLine {
+  height: 580px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}}
+#masterlist::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (min-width : 1599px) {
+#masterlist {
+  height: 600px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}}
 #G1101MasterMnt::-webkit-scrollbar {
   display: none;
 }
@@ -1837,6 +1894,10 @@ font-size: 1.6rem;}
 .mselect-item i.status.done {
   color:#00897b;
   contents:done;
+}
+.mselect-item .subitem {
+	float: right;
+	margin-right: 20px;
 }
 /**********************************************************************************************************************/
 /* 詳細情報共通                                                                                                                                                                                                                                                                        */
@@ -2267,6 +2328,11 @@ font-size: 1.6rem;}
   color: #616161;
   font-size: 0.8rem;
   margin-left: 80px;
+}
+.wd .item2 {
+  color: #616161;
+  font-size: 1.2rem;
+  margin-right: 16px;
 }
 .wd .item.commit {
   color: #388E3C;
@@ -3717,4 +3783,236 @@ ul .date-group {
   border: 10px solid transparent;
   border-left: 10px solid #70a6ff;
   z-index: 0;
+}
+
+/**********************************************************************************************************************/
+/* 定植選択                                                                                                                                                                                                                                                                        */
+/**********************************************************************************************************************/
+.TeishokuMenuArea {
+  position: absolute;
+  z-index: 1000;
+  top:     0;
+  bottom:  0;
+  left:    0;
+  right:   0;
+  width:   28.0rem;
+  height: 13.0rem;
+  line-height: 1.5rem;
+  margin: auto auto;
+  background-color: #1a237e;
+  opacity: 1.0;
+  font-size: 1.0rem;
+}
+.TeishokuMenuArea .selectitem {
+	display: block;
+  padding: 1.0rem;
+  width: 100%;
+  background-color: #eeeeee;
+}
+.TeishokuMenuArea .selectitem.top {
+  margin-top: 3.0rem;
+}
+.TeishokuMenuArea .cancel {
+  position: absolute;
+  display: block;
+  color: #222222;
+  padding: 1.0rem;
+  width: 100%;
+  height: 3.0rem;
+  background-color: #eeeeee;
+}
+
+/**********************************************************************************************************************/
+/* 苗状況照会                                                                                                                                                                                                                                                                        */
+/**********************************************************************************************************************/
+.nae-item {
+  position: relative;
+  min-height: 64px;
+  cursor: pointer;
+  border-bottom: 1px solid #bdbdbd !important;
+  height: 8.0rem;
+  line-height: 8.0rem;
+  width: 100%;
+  overflow-y: hidden;
+/*  background-color: #373740 !important; */
+}
+.nae-item.wnae-item {
+  height: 64px;
+  line-height: 64px;
+}
+.nae-item .field {
+  color: #616161;
+  font-size: 1.4rem;
+}
+.nae-item .kukaku {
+	margin-left: 8px;
+  color: #9e9e9e;
+  font-size: 1.0rem;
+}
+.nae-item i {
+  color: #eeeeee;
+  font-size: 2.0rem;
+  position: absolute;
+  top: 4px;
+  right: 16px;
+}
+.nae-item .item-title {
+	display: inline-block;
+	width: 7rem;
+  color: #212121;
+  font-size: 1.0rem;
+  padding: 4px;
+  margin-bottom: 4px;
+}
+.nae-item .item-title.rotation {
+	border-left: solid 4px #d32f2f;
+}
+.nae-item .item-title.crop {
+  border-left: solid 4px #c2185b;
+}
+.nae-item .item-title.hinsyu {
+  border-left: solid 4px #689f38;
+}
+.nae-item .item-title.hashu {
+  border-left: solid 4px #7b1fa2;
+}
+.nae-item .item-title.seiiku {
+  border-left: solid 4px #512da8;
+}
+.nae-item .item-title.sekisan {
+  border-left: solid 4px #303f9f;
+}
+.nae-item .item-title.rain {
+  border-left: solid 4px #0d47a1;
+}
+.nae-item .item-title.syodoku {
+  border-left: solid 4px #1976d2;
+}
+.nae-item .item-title.kansui {
+  border-left: solid 4px #0288d1;
+}
+.nae-item .item-title.tuihi {
+  border-left: solid 4px #0097a7;
+}
+.nae-item .item-title.shukaku {
+  border-left: solid 4px #00796b;
+}
+.nae-item .item-title.working {
+  border-left: solid 4px #388e3c;
+}
+.nae-item .icon {
+	width: 2.5rem;
+}
+.nae-item .item-div-wrapper {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  height: 9.0rem;
+  line-height: 9.0rem;
+}
+.nae-item .item-div-area {
+  display: inline-block;
+  width: 50%;
+}
+@media only screen and (min-width : 1599px) {
+.nae-item .item-div-area {
+  width: 25%;
+}
+}
+.nae-item .item-div-item {
+  position: relative;
+	width: 100%;
+  height: 3.0rem;
+  line-height: 3.0rem;
+}
+.nae-item .item {
+  color: #e65100;
+  font-size: 1.0rem;
+  margin-left: 8px;
+}
+.nae-item .item-div-item .item.top {
+  position: absolute;
+  left: 2.5rem;
+  top: -0.6rem;
+}
+.nae-item .item-div-item .item.bottom {
+  position: absolute;
+  left: 2.5rem;
+  bottom: -0.6rem;
+}
+.nae-item .sub {
+  color: #aeaeae;
+  font-size: 0.8rem;
+  margin-left: 8px;
+}
+.nae-item .chain {
+  color: #eeeeee;
+  font-size: 1.0rem;
+  margin: 8px;
+  height: 3.0rem;
+  line-height: 2.0rem;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+.nae-item .chain .chainitem{
+	display: inline-blobk;
+  color: #eeeeee;
+  background-color: #424242;
+  font-size: 0.8rem;
+  padding: 4px;
+  margin-right: 4px;
+  line-height: 1.2rem;
+}
+.nae-item .haiki-make {
+  position: absolute;
+  color: #eeeeee;
+  top: 4px;
+  right: 8px;
+  border: 1px solid #cccccc;
+  background-color: #512da8;
+}
+.nae-item .adb {
+  position: absolute;
+  font-size: 1.6rem;
+  color: #aaaaaa;
+  top: 8px;
+  right: calc(8px + 6rem);
+}
+.nae-item .adb.on {
+  color: #b71c1c;
+}
+/**********************************************************************************************************************/
+/* 苗詳細情報                                                                                                                                                                                                                                                                        */
+/**********************************************************************************************************************/
+.nae-detail {
+
+}
+.nae-detail .item-title {
+  color: #616161;
+  font-size: 1.0rem;
+}
+.nae-detail .item {
+  color: #f57c00;
+  font-size: 1.2rem;
+  margin-left: 16px;
+}
+.nae-detail .sub {
+  color: #9e9e9e;
+  font-size: 1.0rem;
+  margin-left: 8px;
+}
+.nae-detail .chain {
+  color: #eeeeee;
+  font-size: 1.0rem;
+  margin: 8px;
+}
+.nae-detail .chain .chainitem{
+  color: #eeeeee;
+  background-color: #424242;
+  font-size: 0.8rem;
+  padding: 4px;
+  margin: 4px;
 }
